--- a/src/rendering/package.json
+++ b/src/rendering/package.json
@@ -133,7 +133,7 @@
     "END_CUSTOMIZATION_EXTRA_SCRIPTS": "",
     "jss": "jss",
     "DEMO_TEAM_CUSTOMIZATION_LINT": "Run both eslint and stylelint",
-    "lint": "npm-run-all --serial eslint stylelint",
+    "lint": "npm-run-all --serial eslint",
     "END_CUSTOMIZATION_LINT": "",
     "bootstrap": "ts-node --project tsconfig.scripts.json scripts/bootstrap.ts",
     "build": "npm-run-all --serial bootstrap next:build",
