--- a/src/items/templates/Project/PLAY/Banner.yml
+++ b/src/items/templates/Project/PLAY/Banner.yml
@@ -1,25 +1,23 @@
 ﻿---
-ID: "24ba86be-f91e-4a65-8b58-0efa3a8ee49a"
-Parent: "fd13c037-d8bb-479c-9130-633c7eabcc40"
+ID: "df18c4fc-2d81-4da7-9530-aa946e3dfd7b"
+Parent: "348162cf-d211-43b5-a745-dc5c8f62d677"
 Template: "ab86861a-6030-46c5-b394-e8f99e8b87db"
-Path: /sitecore/templates/Project/Humber/Rendering Templates/MarketingBanner
+Path: /sitecore/templates/Project/PLAY/Banner
 SharedFields:
 - ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
   Hint: __Icon
-  Value: Office/32x32/photo_landscape.png
+  Value: Office/32x32/window_dialog.png
 - ID: "12c33f3f-86c5-43a5-aeb4-5598cec45116"
   Hint: __Base template
   Value: |
-    {4247AAD4-EBDE-4994-998F-E067A51B1FE4}
-    {5C74E985-E055-43FF-B28C-DB6C6A6450A2}
+    {1930BBEB-7805-471A-A3BE-4858AC7CF696}
     {44A022DB-56D3-419A-B43B-E27E4D8E9C41}
-    {3DB3EB10-F8D0-4CC9-BE26-18CE7B139EC8}
-- ID: "9c6106ea-7a5a-48e2-8cad-f0f693b1e2d4"
-  Hint: __Read Only
+- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
+  Hint: __Sortorder
   Value: 0
-- ID: "f7d48a55-2158-4f02-9356-756654404f73"
-  Hint: __Standard values
-  Value: "{D69792EF-02B2-4674-83F1-5B98D3843E99}"
+- ID: "fd4e2050-186c-4375-8b99-e8a85dd7436e"
+  Hint: __Enable item fallback
+  Value: 
 Languages:
 - Language: "de-DE"
   Fields:
@@ -31,21 +29,29 @@ Languages:
     Fields:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "b33d78ac-7200-47a3-9ecd-691aff012b14"
+      Value: "4f85404d-71e0-423b-b550-9d988158706b"
 - Language: en
+  Fields:
+  - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
+    Hint: __Display name
+    Value: 
   Versions:
   - Version: 1
     Fields:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "f79a87bf-03f9-452d-9044-542719fce91b"
+      Value: "0b0c7654-ff43-4362-a3e0-af62d62ee2a4"
 - Language: "fr-CA"
+  Fields:
+  - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
+    Hint: __Display name
+    Value: Promo
   Versions:
   - Version: 1
     Fields:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "680402e7-78be-4354-9983-8792838911f4"
+      Value: "27da0f29-b9d7-466a-828e-272f1e2aff88"
 - Language: "ja-JP"
   Fields:
   - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
@@ -56,7 +62,7 @@ Languages:
     Fields:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "b33d78ac-7200-47a3-9ecd-691aff012b14"
+      Value: "4f85404d-71e0-423b-b550-9d988158706b"
 - Language: "zh-CN"
   Fields:
   - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
@@ -67,4 +73,4 @@ Languages:
     Fields:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "b33d78ac-7200-47a3-9ecd-691aff012b14"
+      Value: "4f85404d-71e0-423b-b550-9d988158706b"
