--- a/src/items/sxa-content/content/PLAY/playwebsite/home.yml
+++ b/src/items/sxa-content/content/PLAY/playwebsite/home.yml
@@ -16,7 +16,7 @@ SharedFields:
 - ID: "c7c26117-dbb1-42b2-ab5e-f7223845cca3"
   Hint: __Thumbnail
   Value: |
-    <image mediaid="{7D33C3E9-2ACC-4BE3-A5FD-C4BF1451FDA8}" />
+    <image mediaid="{85ABF3FD-2CA1-40BE-A10C-0C88660F779B}" />
 - ID: "dec8d2d5-e3cf-48b6-a653-8e69e2716641"
   Hint: __Security
   Value: |
@@ -124,9 +124,27 @@ Languages:
   Versions:
   - Version: 1
     Fields:
+    - ID: "04bf00db-f5fb-41f7-8ab7-22408372a981"
+      Hint: __Final Renderings
+      Value: |
+        <r xmlns:p="p" xmlns:s="s"
+          p:p="1">
+          <d
+            id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
+            <r
+              uid="{74A3507D-B718-58C6-8C54-5DFA30D2A4E8}"
+              s:ds="{02404F81-3139-4763-B355-1018269334ED}"
+              s:id="{42F39372-72E4-4927-9E70-CC5624C00AE3}"
+              s:par="CSSStyles" />
+            <r
+              uid="{9079BFE6-D63C-4BAC-AD53-5D0B06100CD1}">
+              <p:d />
+            </r>
+          </d>
+        </r>
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "bb4448b1-c5e1-40b5-988e-72f1458ec761"
+      Value: "18600dd3-37f1-44bf-935a-0b0f732f1493"
     - ID: "ed69eacf-5eb2-5050-9d5b-997812318dde"
       Hint: pageTitle
       Value: Home
